adding video, and ploting audio on a moodmap

--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@ header {
     padding: 10px;
 }
 
+#videoContainer {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
 #audioContainer {
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
+
 
 .table {
     width: 100%;
