--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ header {
     padding: 10px;
 }
 
+#audioVideoContainer {
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #videoContainer {
     padding: 10px;
     display: flex;
@@ -11,6 +18,19 @@ header {
 }
 
 #audioContainer {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+#videoContainerTab {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+#audioContainerTab {
     padding: 10px;
     display: flex;
     flex-direction: column;
